force-app/main/default/objects/User/fields/Can_Request_Payment_Plan_Change__c.field-meta.xml
<CustomField>
    <fullName>Can_Request_Payment_Plan_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Request Payment Plan Change</label>
    <type>Checkbox</type>
</CustomField>