force-app/main/default/objects/User/fields/Deactivated_by_process__c.field-meta.xml
<CustomField>
    <fullName>Deactivated_by_process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deactivated by process</label>
    <type>Checkbox</type>
</CustomField>