force-app/main/default/objects/User/fields/Email_F__c.field-meta.xml
<CustomField>
    <fullName>Email_F__c</fullName>
    <formula>Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email F</label>
    <type>Text</type>
</CustomField>