force-app/main/default/objects/User/fields/FirstName_F__c.field-meta.xml
<CustomField>
    <fullName>FirstName_F__c</fullName>
    <formula>FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FirstName F</label>
    <type>Text</type>
</CustomField>