force-app/main/default/objects/User/fields/Is_Sales_Manager_F__c.field-meta.xml
<CustomField>
    <fullName>Is_Sales_Manager_F__c</fullName>
    <formula>Profile.Name =&apos;Sales Manager MIRA&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Allow this user to be selected as Sales Manager in the Mobile App while searching</inlineHelpText>
    <label>Is Sales Manager F</label>
    <type>Checkbox</type>
</CustomField>