force-app/main/default/objects/User/fields/LastName_F__c.field-meta.xml
<CustomField>
    <fullName>LastName_F__c</fullName>
    <formula>LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LastName_F</label>
    <type>Text</type>
</CustomField>