force-app/main/default/objects/User/fields/Phone_F__c.field-meta.xml
<CustomField>
    <fullName>Phone_F__c</fullName>
    <formula>Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone F</label>
    <type>Text</type>
</CustomField>