force-app/main/default/objects/User/fields/Self_Managed__c.field-meta.xml
<CustomField>
    <fullName>Self_Managed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Self Managed</label>
    <type>Checkbox</type>
</CustomField>